--- a/install
+++ b/install
@@ -23,20 +23,31 @@ Sıfırdan ubuntu kurulumu
 7. PHP Ekleri Kurmak
       sudo apt-get install php5-cli php5-curl
       
-8. Yedekleri PC'ye yükle
+8. PHPMyAdmin Kurulumu
+      sudo apt-get update
+      sudo apt-get install phpmyadmin
+      
+9. Yedekleri PC'ye yükle
 
-9. .rpm dosyalarının kurulumu
+10. .rpm dosyalarının kurulumu
       sudo apt-get install alien
       sudo alien my_package.rpm
       sudo dpkg -i my_package.deb
 
-10. JDK 8 Kurulumu
-      http://www.oracle.com/technetwork/java/javase/downloads
+11. JDK 8 Kurulumu
+      sudo add-apt-repository ppa:webupd8team/java
+      sudo apt-get update
+      sudo apt-get install oracle-java8-installer
       
-11. .sh Kurulumu
-      chmod +x /home/cihan/PhpStorm-162.1121.38/bin/phpstorm.sh
-      ./phpstorm.sh
+12. .sh Kurulumu
+      cd PhpStorm-162.1121.38/bin
+      sudo chmod +x phpstorm.sh
+      sudo ./phpstorm.sh
 
-12. PhpStorm Kurulumu
+13. PhpStorm Kurulumu
 
-13. PhpStorm Ayar Dosyalarını İçe Aktarma
+14. PhpStorm Ayar Dosyalarını İçe Aktarma
+
+15. /var/www klasörü altına vhosts klasörü açıp site yedeklerini açtığımız klasörün altına atıyoruz.
+
+16. /etc/hosts dosyasını yedekten yüklüyoruz
