--- a/install
+++ b/install
@@ -55,27 +55,34 @@ Sıfırdan ubuntu kurulumu
       $cfg['Servers'][$i]['user']          = 'username';
       $cfg['Servers'][$i]['password']      = 'password';
       
-9. Yedekleri PC'ye yükle
+10. Database yedeklerini içe aktar
 
-10. .rpm dosyalarının kurulumu
+      mysql -u username -p database_name < backup_name.sql
+
+      
+11. Yedekleri PC'ye yükle
+
+12. .rpm dosyalarının kurulumu
       sudo apt-get install alien
       sudo alien my_package.rpm
       sudo dpkg -i my_package.deb
 
-11. JDK 8 Kurulumu
+13. JDK 8 Kurulumu
       sudo add-apt-repository ppa:webupd8team/java
       sudo apt-get update
       sudo apt-get install oracle-java8-installer
       
-12. .sh Kurulumu
+14. Git Kurulumu
+      sudo apt-get update
+      sudo apt-get install git
+      
+15. PhpStorm Kurulumu
       cd PhpStorm-162.1121.38/bin
       sudo chmod +x phpstorm.sh
       sudo ./phpstorm.sh
 
-13. PhpStorm Kurulumu
+16. PhpStorm Ayar Dosyalarını İçe Aktarma
 
-14. PhpStorm Ayar Dosyalarını İçe Aktarma
+17. /var/www klasörü altına vhosts klasörü açıp site yedeklerini açtığımız klasörün altına atıyoruz.
 
-15. /var/www klasörü altına vhosts klasörü açıp site yedeklerini açtığımız klasörün altına atıyoruz.
-
-16. /etc/hosts dosyasını yedekten yüklüyoruz
+18. /etc/hosts dosyasını yedekten yüklüyoruz
