--- a/install
+++ b/install
@@ -8,6 +8,7 @@ Sıfırdan ubuntu kurulumu
 3. Apache Kurulumu
       sudo apt-get update
       sudo apt-get install apache2
+      sudo a2enmod rewrite (Mod-Rewrite Etkinleştir)
 
 4. Mysql Kurulumu
       sudo apt-get install mysql-server php5-mysql
@@ -58,6 +59,13 @@ Sıfırdan ubuntu kurulumu
       
 
 10. /var/www klasörü altına vhosts klasörü açıp site yedeklerini açtığımız klasörün altına atıyoruz.
+
+11. Eklediğimiz sitelerin izinlerini ayarlıyoruz.
+      sudo chown -R www-data:www-data /var/www/vhosts/site
+      sudo chmod -R 755 /var/www/vhosts/site
+      
+      **Projeleriniz laravel projeler ise "storage" ve "bootstrap/cache" dosyalarının yazma izni olmalı.
+
 
 11. Yüklediğimiz sitelerin .conf dosyalarını kopyalıyoruz
       /etc/apache2/sites-available
