--- a/install
+++ b/install
@@ -120,3 +120,11 @@ Sıfırdan ubuntu kurulumu
 20. PhpStorm Ayar Dosyalarını İçe Aktarma
       File >> Import Settings (Daha önce aynı yerden export settings ile settings.jar dosyasını elde etmiştik.)
       /home/cihan/PhpStorm-162.1121.38/settings.jar
+      
+21. NodeJs, Gulp ve Bower Kurulumu
+
+      sudo apt-get install nodejs
+      sudo apt-get install npm
+      sudo npm install --global gulp bower
+      
+      sudo npm install
